# ip_filter

./: CMakeLists.txt  README.md  ip_filter.cpp  main.cpp
.github/workflows/: cmake.yml
filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.h
lib/: CMakeLists.txt  filter.cpp  filter.h  ip_data.cpp  ip_data.h  ip_list.cpp  ip_list.h
tests/: CMakeLists.txt  f1_result.txt  f2_result.txt  f3_result.txt  test_ip_filter.cpp
